# components/api-server/plugins/gateways/model.go
@@ -7,17 +7,23 @@ import (
 
 type Gateway struct {
 	api.Meta
-	Name        string  `json:"name"`
-	FleetId     string  `json:"fleet_id"`
-	ClusterId   string  `json:"cluster_id"`
-	ReleaseId   string  `json:"release_id"`
-	DatabaseId  string  `json:"database_id"`
-	Namespace   string  `json:"namespace"`
-	ExternalDns *string `json:"external_dns"`
-	TlsMode     *string `json:"tls_mode"`
-	ServiceType *string `json:"service_type"`
-	Status      *string `json:"status"`
-	Phase       *string `json:"phase"`
+	Name           string  `json:"name"`
+	FleetId        string  `json:"fleet_id"`
+	ClusterId      string  `json:"cluster_id"`
+	ReleaseId      string  `json:"release_id"`
+	DatabaseId     string  `json:"database_id"`
+	Namespace      string  `json:"namespace"`
+	ExternalDns    *string `json:"external_dns"`
+	TlsMode        *string `json:"tls_mode"`
+	ServiceType    *string `json:"service_type"`
+	Status         *string `json:"status"`
+	Phase          *string `json:"phase"`
+	Image          *string `json:"image"`
+	ServerDnsNames *string `json:"server_dns_names" gorm:"type:jsonb"`
+	RouteAddress   *string `json:"route_address"`
+	Oidc           *string `json:"oidc" gorm:"type:jsonb"`
+	Route          *string `json:"route" gorm:"type:jsonb"`
+	DatabaseConfig *string `json:"database_config" gorm:"type:jsonb"`
 }
 
 type GatewayList []*Gateway
@@ -37,15 +43,21 @@ func (d *Gateway) BeforeCreate(tx *gorm.DB) error {
 }
 
 type GatewayPatchRequest struct {
-	Name        *string `json:"name,omitempty"`
-	FleetId     *string `json:"fleet_id,omitempty"`
-	ClusterId   *string `json:"cluster_id,omitempty"`
-	ReleaseId   *string `json:"release_id,omitempty"`
-	DatabaseId  *string `json:"database_id,omitempty"`
-	Namespace   *string `json:"namespace,omitempty"`
-	ExternalDns *string `json:"external_dns,omitempty"`
-	TlsMode     *string `json:"tls_mode,omitempty"`
-	ServiceType *string `json:"service_type,omitempty"`
-	Status      *string `json:"status,omitempty"`
-	Phase       *string `json:"phase,omitempty"`
+	Name           *string `json:"name,omitempty"`
+	FleetId        *string `json:"fleet_id,omitempty"`
+	ClusterId      *string `json:"cluster_id,omitempty"`
+	ReleaseId      *string `json:"release_id,omitempty"`
+	DatabaseId     *string `json:"database_id,omitempty"`
+	Namespace      *string `json:"namespace,omitempty"`
+	ExternalDns    *string `json:"external_dns,omitempty"`
+	TlsMode        *string `json:"tls_mode,omitempty"`
+	ServiceType    *string `json:"service_type,omitempty"`
+	Status         *string `json:"status,omitempty"`
+	Phase          *string `json:"phase,omitempty"`
+	Image          *string `json:"image,omitempty"`
+	ServerDnsNames *string `json:"server_dns_names,omitempty"`
+	RouteAddress   *string `json:"route_address,omitempty"`
+	Oidc           *string `json:"oidc,omitempty"`
+	Route          *string `json:"route,omitempty"`
+	DatabaseConfig *string `json:"database_config,omitempty"`
 }
